# Leviathan-VS

./: .ai_cache.json  .gitignore  .http_history.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE_SKILLS.md  CONTRIBUTING.md  INSTALL.bat  LEVIATHAN.bat  README.md  SECURITY.md  START_HOG.bat  TESTE_UNINSTALL.bat  config.json  http_toolkit.py  install.ps1  plugin-http.ts  pyproject.toml  translator.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
core/: .ai_cache.json  .http_history.json  .http_session.json  __version__.py  cache.py  cli.py  colors.py  config.json  config_schema.py  doctor.py  generate_tasks_md.py  http_toolkit.py  jsonc.py  mcp_plugin_base.py  mcp_server.py  translator.py
core/adb/: __init__.py  mcp_adb.py
core/androguard/: mcp_androguard.py
core/apktool/: mcp_apktool.py
core/bluestacks/: __init__.py  mcp_bluestacks.py
core/burpsuite/: mcp_burpsuite.py
core/frida_mcp/: __init__.py  mcp_frida.py
core/ghidra/: __init__.py  mcp_ghidra.py
core/hashcat/: mcp_hashcat.py
core/jadx/: __init__.py  mcp_jadx.py
core/ldplayer/: __init__.py  adb_manager.py  config_ldplayer.json  frida_engine.py  ldconsole.py  leviathan_cli.py  mcp_ldplayer.py  orchestrator.py  protection_bypass.py
core/ldplayer/frida_scripts/: crypto_interceptor.js  emulator_bypass.js  frida_bypass.js  game_inspector.js  network_interceptor.js  root_bypass.js  ssl_bypass.js  universal_bypass.js
core/memu/: __init__.py  mcp_memu.py
core/mitmproxy/: mcp_mitmproxy.py
core/nox/: mcp_nox.py
core/nuclei/: mcp_nuclei.py
core/objection/: mcp_objection.py
core/r2/: mcp_r2.py
core/scapy/: mcp_scapy.py
core/wireshark/: __init__.py  mcp_wireshark.py
docs/: CLAUDE_SKILLS.md  TASKS.md  TOOLS.md
tests/: test_http_and_cache.py  test_mcp_plugin_base.py  test_translator.py
