[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "leviathan-vs"
version = "14.2.0"
description = "VS Code security research environment — semantic translation, MCP servers, tool orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "ThiagoFrag"}]
keywords = ["vscode", "security", "mcp", "translation", "reverse-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "aiohttp>=3.8",
    "colorama>=0.4",
    "rich>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
all = [
    "requests>=2.28",
    "httpx>=0.24",
]

[project.scripts]
leviathan = "core.cli:main"

[project.urls]
Repository = "https://github.com/ThiagoFrag/Leviathan-VS"

# ============================================================================
# TOOL CONFIGURATION
# ============================================================================

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["core", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled per-file)
    "B011",  # do not assert False
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core"]
omit = ["core/*/mcp_*.py", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
